# AIllionare

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKTEST_GUIDE.md  Dockerfile  README.md  backtest_example.py  main.py  pyproject.toml  requirements.txt  setup_ruff.sh
.github/workflows/: build-image.yml  hourly_run.yml  hourly_run_backup.yml
src/: llm.py
src/backtesting/: __init__.py  engine.py  metrics.py  models.py  strategy.py  visualization.py
src/macd_trader/: crew.py  main.py
src/macd_trader/config/: agents.yaml  tasks.yaml
src/macd_trader/tools/: __init__.py  longbridge_tools.py  notification_tools.py  stock_data_tools.py  trading_tools.py  yfinance_tools.py
